# product-api/handlers/put.go
@@ -10,7 +10,7 @@ import (
 // Update a products details
 //
 // responses:
-//	201: noContentResponse
+//		201: noContentResponse
 //  404: errorResponse
 //  422: errorValidation
 
@@ -19,7 +19,7 @@ func (p *Products) Update(rw http.ResponseWriter, r *http.Request) {
 	prod := r.Context().Value(KeyProduct{}).(data.Product)
 
 	p.l.Println("[DEBUG] updating record id", prod.ID)
-	err := data.UpdateProduct(&prod)
+	err := data.UpdateProduct(prod)
 
 	if err == data.ErrProductNotFound {
 		p.l.Println("[ERROR] product not found", err)
